# GSD-Monitor

./: .gitignore  CLAUDE.md  GSD-CORE-VISIBILITY-REVIEW.md  README.md  REQUIREMENTS-VERIFICATION.md  Start GSD Monitor.lnk  devMike.bat  install.ps1  pyproject.toml  start.bat  upgrade.bat  upgrade.ps1
.planning/: .continue-here.md  HANDOFF.json  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v3.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.0-ROADMAP.md  v5.0-MILESTONE-AUDIT.md  v5.0-REQUIREMENTS.md  v5.0-ROADMAP.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  Drawer.tsx  ShellLayout.tsx  api.ts  context.tsx  index.css  utils.ts
gsd_monitor/: __init__.py  __main__.py  file_watcher.py  main_desktop.py
gsd_monitor/api/: __init__.py  app.py
gsd_monitor/models/: __init__.py  core.py  enums.py
gsd_monitor/parsers/: __init__.py  decision_parser.py  gsd_core_roadmap.py  legitimacy_parser.py  plan_parser.py  quick_task.py  requirements_parser.py  review_parser.py  roadmap.py  state_parser.py
gsd_monitor/services/: __init__.py  (+4 more)
tests/: test_api.py  test_backlog_phases.py  test_decision_parser.py  test_discovery_gsd_core.py  test_drift_computation.py  test_gsd2_stateparser.py  test_gsd_core_roadmap_parser.py  test_legitimacy_parser.py  test_review_parser.py  test_roadmap_parser.py  test_settings_service.py  test_state_parser_progress.py  test_worktree_resolution.py
(+112 files in other folders)
