[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gsd-monitor"
dynamic = ["version"]
description = "Desktop companion for Get Shit Done projects"
requires-python = ">= 3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pywebview>=5.3",
    "pygit2>=1.14.0",
    "watchdog>=6.0.0",
]

[tool.hatch.version]
path = "gsd_monitor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["gsd_monitor"]
